Fix Ballistic's contrast。

--- a/source/stylesheets/variables/colors.sass
+++ b/source/stylesheets/variables/colors.sass
@@ -4,7 +4,7 @@
 
 $colors-laser: hsla(20, 60%, 52%, 1)
 $colors-missile: hsla(209, 60%, 52%, 1)
-$colors-ballistic: hsla(284, 60%, 52%, 1)
+$colors-ballistic: hsla(284, 38%, 53%, 1)
 
 $colors-triggers: hsla(0, 60%, 52%, 1)
 $colors-delete: hsla(39, 100%, 50%, 1)
